[project]
name = "tailfleet"
version = "0.1.0"
description = "Hardware inventory and job control across your Tailscale network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plotext>=5.3.2",
    "pyyaml>=6.0.3",
    "rich",
    "textual",
]

[project.scripts]
tailfleet = "tailfleet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tailfleet"]
